--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     <script defer src="script.js"></script>
 </head>
 <body>
-    <header>
-        <img src="logo.png" alt="Winvest Danışmanlık Logosu" class="logo">
-        <h1>Winvest Danışmanlık</h1>
+    <header class="header-flex">
+        <div class="logo-title">
+            <img src="logo.png" alt="Logo" class="logo-small">
+            <h1>Winvest Danışmanlık</h1>
+        </div>
         <nav>
             <ul>
                 <li><a href="#anasayfa" class="nav-link">Ana Sayfa</a></li>
@@ -41,13 +43,20 @@
         </ul>
     </section>
 
-    <section id="iletisim" class="section">
-        <h2>İletişim</h2>
-        <p><strong>Telefon:</strong> İlhami Onay - 0507 416 1424 | Rifat Arslan - 0505 304 9918</p>
-        <p><strong>E-posta:</strong> winvestdanismanlik@gmail.com</p>
-        <p><strong>Instagram:</strong> @winvestdanismanlik</p>
-        <button class="contact-button" onclick="window.location.href='mailto:winvestdanismanlik@gmail.com'">Mail Gönder</button>
-    </section>
+    
+<section id="iletisim" class="section">
+    <h2>İletişim</h2>
+    <p><strong>Telefon:</strong> İlhami Onay - 0507 416 1424 | Rifat Arslan - 0505 304 9918</p>
+    <p><strong>E-posta:</strong> winvestdanismanlik@gmail.com</p>
+
+    <div class="social-links">
+        <a href="https://wa.me/905074161424" target="_blank" class="social-btn whatsapp">WhatsApp</a>
+        <a href="https://www.instagram.com/winvestdanismanlik" target="_blank" class="social-btn instagram">Instagram</a>
+    </div>
+
+    <button class="contact-button" onclick="window.location.href='mailto:winvestdanismanlik@gmail.com'">Mail Gönder</button>
+</section>
+
 
     <footer>
         <p>&copy; 2025 Winvest Danışmanlık. Tüm hakları saklıdır.</p>
