--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
     <section id="hizmetler" class="section">
         <h2>Hizmetlerimiz</h2>
         <ul>
-            <li><strong>📌 Finans ve Yatırım Danışmanlığı:</strong> Şirketinizin finansal durum analizi, yatırım fırsatları ve risk yönetimi.</li>
-            <li><strong>Teşvik Danışmanlığı:</strong> Devlet teşvikleri, teşvik projeleri ve başvuru süreci.</li>
-            <li><strong>Gayrimenkul Danışmanlığı:</strong> Yatırım için en uygun gayrimenkuller, piyasa analizi ve değerleme.</li>
-            <li><strong>Reklam Danışmanlığı:</strong> Marka bilinirliği, dijital ve geleneksel reklam stratejileri.</li>
+            <p><strong>📌 Finans ve Yatırım Danışmanlığı:</strong> Şirketinizin finansal durum analizi, yatırım fırsatları ve risk yönetimi.</li>
+            <p><strong>📌Teşvik Danışmanlığı:</strong> Devlet teşvikleri, teşvik projeleri ve başvuru süreci.</li>
+            <p><strong>📌Gayrimenkul Danışmanlığı:</strong> Yatırım için en uygun gayrimenkuller, piyasa analizi ve değerleme.</li>
+            <p><strong>📌Reklam Danışmanlığı:</strong> Marka bilinirliği, dijital ve geleneksel reklam stratejileri.</li>
         </ul>
     </section>
 
